--- a/rabbitmq_pr1/pom.xml
+++ b/rabbitmq_pr1/pom.xml
@@ -24,7 +24,7 @@
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.11</version>
-      <scope>test</scope>
+<!--      <scope>test</scope>-->
     </dependency>
 
     <!--引入RabbitMq的相关依赖-->
